# langgraph-plumberbot

./: .gitignore  CLAUDE.md  README.md
langgraph-plumberbot-bare-01/: CLAUDE.md  README.md
langgraph-plumberbot-bare-01/plumberbot/: cli.py  state.py
langgraph-plumberbot-hitl/: .env.example  .gitignore  README.md  requirements.txt
langgraph-plumberbot-hitl/examples/: emergency.txt  general_question.txt  missing_info.txt
langgraph-plumberbot-hitl/plumberbot/: graph.py  nodes.py
langgraph-plumberbot-hitl/tests/: test_routing.py
langgraph-plumberbot-hugging-04/: .env.example  CLAUDE.md  Dockerfile  README.md  app.py  requirements.txt
langgraph-plumberbot-hugging-04/plumberbot/: graph.py  nodes.py  state.py
langgraph-plumberbot-langsmith-03/: .env.example  CLAUDE.md  README.md  docker-compose.yml  langgraph.json  pyproject.toml  requirements-client.txt
langgraph-plumberbot-langsmith-03/cli/: main.py  scenarios.py
langgraph-plumberbot-langsmith-03/plumberbot/: graph.py  llm.py  nodes.py
langgraph-plumberbot-langsmith-03/tests/: test_routing.py
langgraph-plumberbot-multiagent-05/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  cli.py  requirements.txt
langgraph-plumberbot-multiagent-05/db/: plumberbot.db  seed.py
langgraph-plumberbot-multiagent-05/docs/: burst_pipe_emergency.txt  drain_cleaning_tips.txt  fix_a_sink.txt  fix_a_toilet.txt  fix_a_water_heater.txt
langgraph-plumberbot-multiagent-05/plumberbot/: db.py  graph.py  (+4 more)
langgraph-plumberbot-withllm-02/: .env.example  CLAUDE.md  README.md  langgraph.json  requirements.txt
(+13 files in other folders)
