[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "plumberbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4.0",
    "langchain-anthropic>=0.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]>=0.1.0",
    "langgraph-sdk>=0.1.0",
    "pytest>=8.0.0",
]
